--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@capacitor/core": "2.4.6",
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/in-app-browser": "^5.31.1",
+    "@ionic-native/social-sharing": "^5.31.1",
     "@ionic/angular": "^5.5.2",
     "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "es6-promise-plugin": "^4.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
