--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "@capacitor/android": "^2.4.6",
-    "@capacitor/core": "2.4.6",
+    "@capacitor/core": "^2.4.6",
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/in-app-browser": "^5.31.1",
     "@ionic-native/social-sharing": "^5.31.1",
@@ -38,7 +38,7 @@
     "@angular/compiler": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
     "@angular/language-service": "~11.0.5",
-    "@capacitor/cli": "2.4.6",
+    "@capacitor/cli": "^2.4.6",
     "@ionic/angular-toolkit": "^2.3.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
